Problem solved
ის ბაგი გავასწორე, ლონგ ქლიქის